router and update page

--- a/src/components/appLayout/layoutStyle.css
+++ b/src/components/appLayout/layoutStyle.css
@@ -5,13 +5,17 @@
     max-height: 40px;
     padding-top: 5px;
     padding-bottom: 5px;
-
+    position: absolute;
+    top : 0;
+    left: 0;
+    right: 0;
     padding-left: 10px;
     padding-right: 10px;
     flex-direction: row;
     justify-content: space-between;
-    background-color: aqua;
+    /* background-color: aqua; */
     align-items: center;
+    border-bottom: 1px solid black;
 }
 
 .app-bar-title-text {
@@ -25,13 +29,14 @@
 }
 
 .main-container {
+    margin-top: 50px;
     display: flex;
-    height: calc(100vh - 40px);
-    background-color: red;
+    height: calc(100vh - 50px);
+    /* background-color: red; */
 }
 
 
 .appLayout-main {
-    height: calc(100vh - 40px);
+    height: calc(100vh - 50px);
     ;
 }
