--- a/src/components/appLayout/layoutStyle.css
+++ b/src/components/appLayout/layoutStyle.css
@@ -6,7 +6,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     position: absolute;
-    top : 0;
+    top: 0;
     left: 0;
     right: 0;
     padding-left: 10px;
@@ -31,12 +31,14 @@
 .main-container {
     margin-top: 50px;
     display: flex;
-    height: calc(100vh - 50px);
+    /* height: calc(100vh - 50px); */
     /* background-color: red; */
 }
 
 
 .appLayout-main {
     height: calc(100vh - 50px);
-    ;
+
 }
+
+.label-text {}
