--- a/src/features/auth/pages/login/login_page.css
+++ b/src/features/auth/pages/login/login_page.css
@@ -3,3 +3,14 @@
     flex-direction: column;
     padding: 12px;
 }
+
+.errorContainer{
+    border: 1px solid red;
+    border-radius: 9px;
+    display: flex;
+    justify-content: center;
+    padding: 9px;
+    font-weight: bold;
+    color: red;
+    margin-top: 12px;
+}
